# drift-detection-system

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CONTRIBUTING.md  DEPLOYMENT_BLOCKERS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STEPS.md  ENHANCEMENT_SUMMARY.md  Makefile  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_CRON_SETUP.md  README.md  SETUP_WORKFLOW.md  WHAT_CHANGED.md  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
docs/: CRON_SETUP.md  ENHANCEMENTS.md  EXAMPLE_OUTPUT.md  LAMBDA_DEPLOYMENT.md  SNS_SETUP.md  architecture.md
lambda/: Dockerfile  handler.py
scripts/: run-drift-detection.bat  run-drift-detection.sh
src/drift_detection/: README.md  __init__.py  cli.py  comparator.py  cost_analyzer.py  notifier.py  reporter.py  risk_scorer.py  scanner.py  storage.py
terraform/: backend.tf  backend_config.tf  main.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/environments/prod/: main.tf  outputs.tf
terraform/environments/staging/: main.tf
terraform/lambda/: main.tf  outputs.tf  response.json  terraform.tfvars.example  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: test_basic.py  test_cli.py  test_comparator.py  test_cost_analyzer.py  test_cost_analyzer_enhanced.py  test_notifier.py  test_reporter.py  test_risk_scorer.py  test_scanner.py  test_storage.py
